Fixed long message lines overflowing the page

--- a/public/scss/chat.scss
+++ b/public/scss/chat.scss
@@ -18,6 +18,7 @@ body {
 
     li {
         padding: 5px 10px;
+        overflow-wrap: break-word;
         &:nth-child(odd) {
             background: #eee;
         }
